Containerize app, set max conns to db in main, update swagger docs
